Bug 1151181 - properly initialize error string in mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp::OnStopRunningUrl for all error codes. r=Neil